[package]
name = "terminal-talk"
version = "0.2.1"
edition = "2021"
license = "ISC"
description = "Talk with your friends by zooming in your terminal so they can read it. Yep. That's it."
repository = "https://github.com/MNThomson/terminal-talk"

[features]
default = ["x11rb"]
x11rb = ["enigo/x11rb"]

[dependencies]
ctrlc = "3.4.4"
enigo = { version = "0.2.0", features = ["wayland"] }

[[bin]]
name = "ttalk"
path = "src/main.rs"
